--- a/app/views/setsubiyoyakus/_form.html.haml
+++ b/app/views/setsubiyoyakus/_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for(@setsubiyoyaku) do |f|
   .col-sm-2.col-sm-offset-2
     = f.input :設備コード, label:'設備コード' do
-      = f.select :設備コード, Setsubi.all.map {|p| [ p.設備名, p.設備コード ] },{}, {include_blank: true, class: 'form-control'}
+      = f.select :設備コード, Setsubi.all.map {|p| [ p.設備コード+"-"+p.設備名, p.設備コード ] },{}, {include_blank: true, class: 'form-control'}
     = f.input :予約者, as: :hidden, input_html: {value: session[:user]}
     = f.input :開始, as: :date_time_picker
     = f.input :終了, as: :date_time_picker
